--- a/src/final-results.Rmd
+++ b/src/final-results.Rmd
@@ -121,10 +121,10 @@ ggplot(data=articles_by_year, aes(x=year, y=n, fill=evi_dence)) +
         legend.title = element_blank(),
         axis.text.y = element_text(margin = margin(r = -15)),
         axis.text.x = element_text(margin = margin(t = -10))) +
-  labs(y = "Publications (Per Year)") +
+  labs(y = "Total Publications (By Year)") +
   scale_x_continuous(breaks = c(1960, 1965, 1970, 1975, 1980, 1985, 1990, 1995, 2000, 2005, 2010, 2015), 
-                   labels = c(1960, 1965, 1970, 1975, 1980, 1985, 1990, 1995, 2000, 2005, 2010, 2015)) +
-  ggtitle("Publications on Racial Differences in Testosterone Per Year")
+                   labels = c(1960, 1965, 1970, 1975, 1980, 1985, 1990, 1995, 2000, 2005, 2010, 2015)) 
+  #ggtitle("Publications on Racial Differences in Testosterone Over Time")
 
 ```
 
